* V1.55.16
  * fixed a bug in module:env.
  * added more MLPerf tests from https://github.com/ctuning/ck-ml to find above bug.

* V1.55.15
  * added module:docs to be more compatible with standard repos
  * added LICENSE.third-party.txt

* V1.55.14
  * improved error reporting in packages and programs

* V1.55.13  
  * print "Enter -1 to use CK packages" when detecting soft
    to install CK packages instead of detecting 
    already installed software

* V1.55.12
  * added module:doc to the distribution

* V1.55.11
  * Test environment variable "CK_SKIP_SAVING_PYTHON_BIN" during CK installation
    to skip detecting and recording python binary to ck-python.cfg
    to avoid mixing up virtual environments.
  * When CK_PYTHON is defined during CK installation,
    record it to ck-python.cfg to preserve the default version.

* V1.55.10
  * do not ask to select variations in "ck install package" 
    when there are 2 or more variations!

* V1.55.9
  * added --force_version to "ck detect soft" to force version.
    Useful to automate autodetection of imagenet, for example.

* V1.55.8
  * added --quiet flag to automatically enter default anser to most questions

* V1.55.7
  * added --default flag to ck install package to select 0 
    when multiple packages and variations available.

* V1.55.6
  * extended module:package to ask a user to select a variation 
    for a given package when there are multiple versions available.

* V1.55.5
  * added --tags to "ck find" action to be able to search for entries 
    by tags and return their paths
  * added module:doc to abstract documentation

* V1.55.4
  * [sztaylor] fix cpu & gpu set_freq commands

* V1.55.3
  * fixed minor API typo
  * improvements from Arm to 2 CK modules: platform.cpu and platform.gpu:
    https://github.com/ctuning/ck-env/pull/113

* V1.55.2
  * removed two outdated modules
  * updated module:program
  * added incubator projects
  * prepared for release

* V1.55.0
  * Fixed missing CK modules